# MultiThread

./: CMakeLists.txt  Cargo.cpp  Cargo.h  InputData.cpp  InputData.h  Menu.cpp  README.md  Testai.cpp  Testai.h  Testaimain.cpp  main.cpp  test_data.txt
Calculations/: Cargo.cpp
DataGenerator/: generate_data.cpp
Functions/: Benchmark.cpp  Benchmark.h
Input/: InputData.cpp  InputData.h
TimeFunctions/: Benchmark.cpp  Benchmark.h
